--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,8 @@
     <string name="_22_05_2023">22/05/2023</string>
     <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_nulla_eu_magna_aliquet_placerat_tellus_vitae_efficitur_diam_nulla_facilisi_nulla_facilisi_quisque_pulvinar_nisi_quis_tincidunt_lacinia">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eu magna aliquet, placerat tellus vitae, efficitur diam. Nulla facilisi. Nulla facilisi. Quisque pulvinar nisi quis tincidunt lacinia.</string>
     <string name="judul_news">Judul News</string>
+    <string name="home">Home</string>
+    <string name="favorite">Favorite</string>
+    <string name="Cart">Cart</string>
+    <string name="account">Account</string>
 </resources>
