--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,5 @@
     <string name="detail">Detail</string>
     <string name="product">Product</string>
     <string name="harga">Harga</string>
+    <string name="name">Name</string>
 </resources>
