--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,5 @@
     <string name="product">Product</string>
     <string name="harga">Harga</string>
     <string name="name">Name</string>
+    <string name="detail_news">Detail News</string>
 </resources>
